discussion/kv_engine/153365/153365_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

wip: flush to shards/KVStores concurrently

Change-Id: I780574277c6fec87b1b608427f4a80419f8712c2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-11 15:42:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-11 18:04:48.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8944/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/magma-kvstore/magma-kvstore.h b/engines/ep/src/magma-kvstore/magma-kvstore.h
index 738cb4126..8905aba9c 100644
--- a/engines/ep/src/magma-kvstore/magma-kvstore.h
+++ b/engines/ep/src/magma-kvstore/magma-kvstore.h
@@ -160,7 +160,7 @@ struct MagmaKVStoreTransactionContext : public EPTransactionContext {
         : EPTransactionContext(stats, vb) {
     }
 
-    bool supportsConcurrentTxns() const {
+    bool supportsConcurrentTxns() const override {
         return true;
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8944/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:163:10: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
    bool supportsConcurrentTxns() const {
         ^
                                        override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:163:40: note: FIX-IT applied suggested code changes
    bool supportsConcurrentTxns() const {
                                       ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/magma-kvstore/magma-kvstore.h b/engines/ep/src/magma-kvstore/magma-kvstore.h
index 738cb4126..8905aba9c 100644
--- a/engines/ep/src/magma-kvstore/magma-kvstore.h
+++ b/engines/ep/src/magma-kvstore/magma-kvstore.h
@@ -160,7 +160,7 @@ struct MagmaKVStoreTransactionContext : public EPTransactionContext {
         : EPTransactionContext(stats, vb) {
     }
 
-    bool supportsConcurrentTxns() const {
+    bool supportsConcurrentTxns() const override {
         return true;
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8944/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35789/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
..\kv_engine\tests\testapp\testapp_sasl.cc(325): error: Expected equality of these values:
  cb::mcbp::Status::NotMyVbucket
    Which is: I"m not responsible for this vbucket
  getRsp.getStatus()
    Which is: Not found
[  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (67 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35789/ )

Timeout of a CTest test 406/407 Test #253: ep_testsuite.value_eviction.magma .............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35789/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10497/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
[2021-05-11T16:32:15.693Z] ../kv_engine/tests/testapp/testapp_sasl.cc:325: Failure
[2021-05-11T16:32:15.693Z] Expected equality of these values:
[2021-05-11T16:32:15.693Z]   cb::mcbp::Status::NotMyVbucket
[2021-05-11T16:32:15.693Z]     Which is: I"m not responsible for this vbucket
[2021-05-11T16:32:15.693Z]   getRsp.getStatus()
[2021-05-11T16:32:15.693Z]     Which is: Not found
[2021-05-11T16:32:15.693Z] [  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (20 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10497/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10892/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
[2021-05-11T16:32:40.860Z] ../kv_engine/tests/testapp/testapp_sasl.cc:325: Failure
[2021-05-11T16:32:40.860Z] Expected equality of these values:
[2021-05-11T16:32:40.860Z]   cb::mcbp::Status::NotMyVbucket
[2021-05-11T16:32:40.860Z]     Which is: I"m not responsible for this vbucket
[2021-05-11T16:32:40.860Z]   getRsp.getStatus()
[2021-05-11T16:32:40.860Z]     Which is: Not found
[2021-05-11T16:32:40.860Z] [  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (190 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10892/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7496/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30601/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9565/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10638/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18448/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
